<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  android:id="@+id/scroll" android:layout_width="fill_parent"
  android:layout_height="wrap_content">
  
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <!-- Row 1 with single column -->
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/axel"/>
    </TableRow> 
 
    <!-- Row 2 with 3 columns -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/TextView01"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/nombre_1"
            android:textSize="20dp" />
 
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/TextView02"
            android:layout_weight="1"
            android:text="@string/bios1"
            android:padding="20dip" 
            android:gravity="center"/> 
    </TableRow>
    <TableRow
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/ImageView01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/isaac" />

    </TableRow> 
 
    <!-- Row 2 with 3 columns -->
    <TableRow
        android:id="@+id/tableRow1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/isaacTextView"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/nombre_2"
            android:textSize="20dp" />
 
    </TableRow>
    <TableRow
        android:id="@+id/tableRow2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">

        <TextView
            android:id="@+id/isaacDesTextView"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="20dip"
            android:text="@string/bios2" />
 
    </TableRow> 
 
    <!-- Row 2 with 3 columns --> 
 
    <!-- Row 2 with 3 columns -->
    
 
</TableLayout>
</ScrollView>